# 4LINUX

./: .gitignore  README.md  main.py  nodes.xml  pyproject.toml  questions.xml  relations.xml  synthetic_student_population.csv  test.py
SINKT/: agents.py  knowledge_graph.py  models.py  population.py  student.py  utils.py
SINKT/agents/: base_agent.py  error_analyzer.py  question.py
SINKT/graph/: builder.py  model.py  selector.py
notebooks/: .gitignore  Neo4j.ipynb  SINKT_Base_Individual.ipynb  SINKT_Base_Sintética.ipynb  SINKT_TIEnc.ipynb
notebooks/ebooks/LinuxFundamentals/: graph.html  graph_from_toc.html  initial_nodes.xml  knowledge_graph.html  nodes.xml  relations.xml
notebooks/ebooks/LinuxFundamentals/aprendendo_comandos_do_gnulinux/: document.md
notebooks/ebooks/LinuxFundamentals/arquivos_de_configuracao_do_shell/: document.md
notebooks/ebooks/LinuxFundamentals/caminhos_de_diretorios/: document.md
notebooks/ebooks/LinuxFundamentals/certificacoes_linux/: document.md
notebooks/ebooks/LinuxFundamentals/comando_apropos/: document.md
notebooks/graph_runs/claude-opus-4-5_claude-opus-4-5/: graph.html  nodes.xml  relations.xml
notebooks/graph_runs/claude-opus-4-5_gpt5-1/: graph.html  nodes.xml  relations.xml
notebooks/graph_runs/gpt5-1_claude-opus-4-5/: graph.html  nodes.xml  relations.xml
notebooks/graph_runs/gpt5-1_gpt5-1/: graph.html  nodes.xml  relations.xml
reports/: Resumo Técnico Comparativo MAIC & SINKT.md  Simulação de estudantes + Perfis Cognitivos + Treino sintético do SINKT.md  Validação dos conceitos SINKT (Extração + Estratégias).md
(+25 files in other folders)
