[project]
name = "4linux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.1",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langsmith>=0.4.59",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "pyvis>=0.3.2",
    "tqdm>=4.67.1",
]
